Migrate from `StartupActivity` (obsolete) -> `VcsRepositoryMappingListener`
Fixes #445